--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 68,
+      "line": 70,
       "column": 13,
-      "index": 3590
+      "index": 3722
     },
     "end": {
-      "line": 71,
+      "line": 73,
       "column": 3,
-      "index": 3663
+      "index": 3795
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 72,
+      "line": 74,
       "column": 13,
-      "index": 3678
+      "index": 3810
     },
     "end": {
-      "line": 75,
+      "line": 77,
       "column": 3,
-      "index": 3760
+      "index": 3892
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 76,
+      "line": 78,
       "column": 13,
-      "index": 3775
+      "index": 3907
     },
     "end": {
-      "line": 79,
+      "line": 81,
       "column": 3,
-      "index": 3854
+      "index": 3986
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 80,
+      "line": 82,
       "column": 16,
-      "index": 3872
+      "index": 4004
     },
     "end": {
-      "line": 83,
+      "line": 85,
       "column": 3,
-      "index": 3957
+      "index": 4089
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 84,
+      "line": 86,
       "column": 15,
-      "index": 3974
+      "index": 4106
     },
     "end": {
-      "line": 87,
+      "line": 89,
       "column": 3,
-      "index": 4050
+      "index": 4182
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 88,
+      "line": 90,
       "column": 12,
-      "index": 4064
+      "index": 4196
     },
     "end": {
-      "line": 91,
+      "line": 93,
       "column": 3,
-      "index": 4141
+      "index": 4273
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 92,
+      "line": 94,
       "column": 10,
-      "index": 4153
+      "index": 4285
     },
     "end": {
-      "line": 95,
+      "line": 97,
       "column": 3,
-      "index": 4226
+      "index": 4358
     }
   },
   {
@@ -109,14 +109,29 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 96,
+      "line": 98,
       "column": 18,
-      "index": 4246
+      "index": 4378
     },
     "end": {
-      "line": 99,
+      "line": 101,
       "column": 3,
-      "index": 4335
+      "index": 4467
+    }
+  },
+  {
+    "id": "swap.swapScreen.balance",
+    "defaultMessage": "!!!Balance",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 102,
+      "column": 11,
+      "index": 4480
+    },
+    "end": {
+      "line": 105,
+      "column": 3,
+      "index": 4554
     }
   },
   {
@@ -124,14 +139,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 100,
+      "line": 106,
       "column": 15,
-      "index": 4352
+      "index": 4571
     },
     "end": {
-      "line": 103,
+      "line": 109,
       "column": 3,
-      "index": 4435
+      "index": 4654
     }
   },
   {
@@ -139,14 +154,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 104,
+      "line": 110,
       "column": 15,
-      "index": 4452
+      "index": 4671
     },
     "end": {
-      "line": 107,
+      "line": 113,
       "column": 3,
-      "index": 4535
+      "index": 4754
     }
   },
   {
@@ -154,14 +169,14 @@
     "defaultMessage": "!!!Limit Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 108,
+      "line": 114,
       "column": 14,
-      "index": 4551
+      "index": 4770
     },
     "end": {
-      "line": 111,
+      "line": 117,
       "column": 3,
-      "index": 4632
+      "index": 4851
     }
   },
   {
@@ -169,14 +184,29 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 112,
+      "line": 118,
       "column": 21,
-      "index": 4655
+      "index": 4874
     },
     "end": {
-      "line": 115,
+      "line": 121,
       "column": 3,
-      "index": 4750
+      "index": 4969
+    }
+  },
+  {
+    "id": "swap.swapScreen.slippageToleranceError",
+    "defaultMessage": "!!!Slippage must be a number between 0 and 100 and have up to 1 decimal",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 122,
+      "column": 26,
+      "index": 4997
+    },
+    "end": {
+      "line": 125,
+      "column": 3,
+      "index": 5147
     }
   },
   {
@@ -184,14 +214,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 116,
+      "line": 126,
       "column": 25,
-      "index": 4777
+      "index": 5174
     },
     "end": {
-      "line": 119,
+      "line": 129,
       "column": 3,
-      "index": 4881
+      "index": 5278
     }
   },
   {
@@ -199,14 +229,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 120,
+      "line": 130,
       "column": 14,
-      "index": 4897
+      "index": 5294
     },
     "end": {
-      "line": 123,
+      "line": 133,
       "column": 3,
-      "index": 4985
+      "index": 5382
     }
   },
   {
@@ -214,14 +244,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 124,
+      "line": 134,
       "column": 12,
-      "index": 4999
+      "index": 5396
     },
     "end": {
-      "line": 127,
+      "line": 137,
       "column": 3,
-      "index": 5097
+      "index": 5494
     }
   },
   {
@@ -229,14 +259,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 128,
+      "line": 138,
       "column": 19,
-      "index": 5118
+      "index": 5515
     },
     "end": {
-      "line": 131,
+      "line": 141,
       "column": 3,
-      "index": 5219
+      "index": 5616
     }
   },
   {
@@ -244,14 +274,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 132,
+      "line": 142,
       "column": 16,
-      "index": 5237
+      "index": 5634
     },
     "end": {
-      "line": 135,
+      "line": 145,
       "column": 3,
-      "index": 5375
+      "index": 5772
     }
   },
   {
@@ -259,14 +289,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 136,
+      "line": 146,
       "column": 14,
-      "index": 5391
+      "index": 5788
     },
     "end": {
-      "line": 140,
+      "line": 150,
       "column": 3,
-      "index": 5572
+      "index": 5969
     }
   },
   {
@@ -274,14 +304,14 @@
     "defaultMessage": "!!!Min ADA",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 151,
       "column": 19,
-      "index": 5593
+      "index": 5990
     },
     "end": {
-      "line": 144,
+      "line": 154,
       "column": 3,
-      "index": 5675
+      "index": 6072
     }
   },
   {
@@ -289,14 +319,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 145,
+      "line": 155,
       "column": 12,
-      "index": 5689
+      "index": 6086
     },
     "end": {
-      "line": 148,
+      "line": 158,
       "column": 3,
-      "index": 5852
+      "index": 6249
     }
   },
   {
@@ -304,14 +334,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 149,
+      "line": 159,
       "column": 17,
-      "index": 5871
+      "index": 6268
     },
     "end": {
-      "line": 152,
+      "line": 162,
       "column": 3,
-      "index": 5947
+      "index": 6344
     }
   },
   {
@@ -319,14 +349,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 153,
+      "line": 163,
       "column": 19,
-      "index": 5968
+      "index": 6365
     },
     "end": {
-      "line": 156,
+      "line": 166,
       "column": 3,
-      "index": 6114
+      "index": 6511
     }
   },
   {
@@ -334,14 +364,14 @@
     "defaultMessage": "!!!Min Received",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 157,
+      "line": 167,
       "column": 24,
-      "index": 6140
+      "index": 6537
     },
     "end": {
-      "line": 160,
+      "line": 170,
       "column": 3,
-      "index": 6232
+      "index": 6629
     }
   },
   {
@@ -349,14 +379,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 161,
+      "line": 171,
       "column": 17,
-      "index": 6251
+      "index": 6648
     },
     "end": {
-      "line": 164,
+      "line": 174,
       "column": 3,
-      "index": 6389
+      "index": 6786
     }
   },
   {
@@ -364,14 +394,14 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 165,
+      "line": 175,
       "column": 20,
-      "index": 6411
+      "index": 6808
     },
     "end": {
-      "line": 168,
+      "line": 178,
       "column": 3,
-      "index": 6506
+      "index": 6903
     }
   },
   {
@@ -379,14 +409,14 @@
     "defaultMessage": "!!!Volume, 24h",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 169,
+      "line": 179,
       "column": 10,
-      "index": 6518
+      "index": 6915
     },
     "end": {
-      "line": 172,
+      "line": 182,
       "column": 3,
-      "index": 6595
+      "index": 6992
     }
   },
   {
@@ -394,14 +424,14 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 173,
+      "line": 183,
       "column": 24,
-      "index": 6621
+      "index": 7018
     },
     "end": {
-      "line": 177,
+      "line": 187,
       "column": 3,
-      "index": 6903
+      "index": 7300
     }
   },
   {
@@ -409,14 +439,14 @@
     "defaultMessage": "!!! Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 178,
+      "line": 188,
       "column": 9,
-      "index": 6914
+      "index": 7311
     },
     "end": {
-      "line": 181,
+      "line": 191,
       "column": 3,
-      "index": 6976
+      "index": 7373
     }
   },
   {
@@ -424,14 +454,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 182,
+      "line": 192,
       "column": 17,
-      "index": 6995
+      "index": 7392
     },
     "end": {
-      "line": 185,
+      "line": 195,
       "column": 3,
-      "index": 7097
+      "index": 7494
     }
   },
   {
@@ -439,14 +469,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 186,
+      "line": 196,
       "column": 21,
-      "index": 7120
+      "index": 7517
     },
     "end": {
-      "line": 189,
+      "line": 199,
       "column": 3,
-      "index": 7222
+      "index": 7619
     }
   },
   {
@@ -454,14 +484,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 190,
+      "line": 200,
       "column": 17,
-      "index": 7241
+      "index": 7638
     },
     "end": {
-      "line": 193,
+      "line": 203,
       "column": 3,
-      "index": 7328
+      "index": 7725
     }
   },
   {
@@ -469,14 +499,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 194,
+      "line": 204,
       "column": 14,
-      "index": 7344
+      "index": 7741
     },
     "end": {
-      "line": 197,
+      "line": 207,
       "column": 3,
-      "index": 7425
+      "index": 7822
     }
   },
   {
@@ -484,14 +514,14 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 198,
+      "line": 208,
       "column": 19,
-      "index": 7446
+      "index": 7843
     },
     "end": {
-      "line": 201,
+      "line": 211,
       "column": 3,
-      "index": 7537
+      "index": 7934
     }
   },
   {
@@ -499,14 +529,14 @@
     "defaultMessage": "!!!TVL",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 202,
+      "line": 212,
       "column": 7,
-      "index": 7546
+      "index": 7943
     },
     "end": {
-      "line": 205,
+      "line": 215,
       "column": 3,
-      "index": 7612
+      "index": 8009
     }
   },
   {
@@ -514,14 +544,14 @@
     "defaultMessage": "!!! Pool Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 206,
+      "line": 216,
       "column": 11,
-      "index": 7625
+      "index": 8022
     },
     "end": {
-      "line": 209,
+      "line": 219,
       "column": 3,
-      "index": 7701
+      "index": 8098
     }
   },
   {
@@ -529,14 +559,14 @@
     "defaultMessage": "!!! Batcher Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 210,
+      "line": 220,
       "column": 14,
-      "index": 7717
+      "index": 8114
     },
     "end": {
-      "line": 213,
+      "line": 223,
       "column": 3,
-      "index": 7799
+      "index": 8196
     }
   },
   {
@@ -544,14 +574,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 214,
+      "line": 224,
       "column": 9,
-      "index": 7810
+      "index": 8207
     },
     "end": {
-      "line": 217,
+      "line": 227,
       "column": 3,
-      "index": 7883
+      "index": 8280
     }
   },
   {
@@ -559,14 +589,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 218,
+      "line": 228,
       "column": 9,
-      "index": 7894
+      "index": 8291
     },
     "end": {
-      "line": 221,
+      "line": 231,
       "column": 3,
-      "index": 7955
+      "index": 8352
     }
   },
   {
@@ -574,14 +604,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 222,
+      "line": 232,
       "column": 19,
-      "index": 7976
+      "index": 8373
     },
     "end": {
-      "line": 225,
+      "line": 235,
       "column": 3,
-      "index": 8058
+      "index": 8455
     }
   },
   {
@@ -589,14 +619,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 226,
+      "line": 236,
       "column": 20,
-      "index": 8080
+      "index": 8477
     },
     "end": {
-      "line": 229,
+      "line": 239,
       "column": 3,
-      "index": 8164
+      "index": 8561
     }
   },
   {
@@ -604,14 +634,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 230,
+      "line": 240,
       "column": 25,
-      "index": 8191
+      "index": 8588
     },
     "end": {
-      "line": 233,
+      "line": 243,
       "column": 3,
-      "index": 8311
+      "index": 8708
     }
   },
   {
@@ -619,14 +649,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 234,
+      "line": 244,
       "column": 8,
-      "index": 8321
+      "index": 8718
     },
     "end": {
-      "line": 237,
+      "line": 247,
       "column": 3,
-      "index": 8380
+      "index": 8777
     }
   },
   {
@@ -634,14 +664,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 238,
+      "line": 248,
       "column": 14,
-      "index": 8396
+      "index": 8793
     },
     "end": {
-      "line": 241,
+      "line": 251,
       "column": 3,
-      "index": 8455
+      "index": 8852
     }
   },
   {
@@ -649,14 +679,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 244,
+      "line": 254,
       "column": 11,
-      "index": 8514
+      "index": 8911
     },
     "end": {
-      "line": 247,
+      "line": 257,
       "column": 3,
-      "index": 8609
+      "index": 9006
     }
   },
   {
@@ -664,14 +694,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 248,
+      "line": 258,
       "column": 12,
-      "index": 8623
+      "index": 9020
     },
     "end": {
-      "line": 251,
+      "line": 261,
       "column": 3,
-      "index": 8726
+      "index": 9123
     }
   },
   {
@@ -679,14 +709,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 252,
+      "line": 262,
       "column": 9,
-      "index": 8737
+      "index": 9134
     },
     "end": {
-      "line": 255,
+      "line": 265,
       "column": 3,
-      "index": 8827
+      "index": 9224
     }
   },
   {
@@ -694,14 +724,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 256,
+      "line": 266,
       "column": 16,
-      "index": 8845
+      "index": 9242
     },
     "end": {
-      "line": 259,
+      "line": 269,
       "column": 3,
-      "index": 8941
+      "index": 9338
     }
   },
   {
@@ -709,14 +739,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 260,
+      "line": 270,
       "column": 20,
-      "index": 8963
+      "index": 9360
     },
     "end": {
-      "line": 263,
+      "line": 273,
       "column": 3,
-      "index": 9052
+      "index": 9449
     }
   },
   {
@@ -724,14 +754,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 264,
+      "line": 274,
       "column": 11,
-      "index": 9065
+      "index": 9462
     },
     "end": {
-      "line": 267,
+      "line": 277,
       "column": 3,
-      "index": 9159
+      "index": 9556
     }
   }
 ]
