--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -241,7 +241,7 @@
   },
   {
     "id": "swap.swapScreen.assetsIn",
-    "defaultMessage": "!!!This assets is in my portfolio",
+    "defaultMessage": "!!!This asset is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
       "line": 134,
@@ -251,7 +251,7 @@
     "end": {
       "line": 137,
       "column": 3,
-      "index": 5494
+      "index": 5493
     }
   },
   {
@@ -261,12 +261,12 @@
     "start": {
       "line": 138,
       "column": 19,
-      "index": 5515
+      "index": 5514
     },
     "end": {
       "line": 141,
       "column": 3,
-      "index": 5616
+      "index": 5615
     }
   },
   {
@@ -276,12 +276,12 @@
     "start": {
       "line": 142,
       "column": 16,
-      "index": 5634
+      "index": 5633
     },
     "end": {
       "line": 145,
       "column": 3,
-      "index": 5772
+      "index": 5771
     }
   },
   {
@@ -291,12 +291,12 @@
     "start": {
       "line": 146,
       "column": 14,
-      "index": 5788
+      "index": 5787
     },
     "end": {
       "line": 150,
       "column": 3,
-      "index": 5969
+      "index": 5968
     }
   },
   {
@@ -306,12 +306,12 @@
     "start": {
       "line": 151,
       "column": 19,
-      "index": 5990
+      "index": 5989
     },
     "end": {
       "line": 154,
       "column": 3,
-      "index": 6072
+      "index": 6071
     }
   },
   {
@@ -321,12 +321,12 @@
     "start": {
       "line": 155,
       "column": 12,
-      "index": 6086
+      "index": 6085
     },
     "end": {
       "line": 158,
       "column": 3,
-      "index": 6249
+      "index": 6248
     }
   },
   {
@@ -336,12 +336,12 @@
     "start": {
       "line": 159,
       "column": 17,
-      "index": 6268
+      "index": 6267
     },
     "end": {
       "line": 162,
       "column": 3,
-      "index": 6344
+      "index": 6343
     }
   },
   {
@@ -351,12 +351,12 @@
     "start": {
       "line": 163,
       "column": 19,
-      "index": 6365
+      "index": 6364
     },
     "end": {
       "line": 166,
       "column": 3,
-      "index": 6511
+      "index": 6510
     }
   },
   {
@@ -366,12 +366,12 @@
     "start": {
       "line": 167,
       "column": 24,
-      "index": 6537
+      "index": 6536
     },
     "end": {
       "line": 170,
       "column": 3,
-      "index": 6629
+      "index": 6628
     }
   },
   {
@@ -381,12 +381,12 @@
     "start": {
       "line": 171,
       "column": 17,
-      "index": 6648
+      "index": 6647
     },
     "end": {
       "line": 174,
       "column": 3,
-      "index": 6786
+      "index": 6785
     }
   },
   {
@@ -396,12 +396,12 @@
     "start": {
       "line": 175,
       "column": 20,
-      "index": 6808
+      "index": 6807
     },
     "end": {
       "line": 178,
       "column": 3,
-      "index": 6903
+      "index": 6902
     }
   },
   {
@@ -411,12 +411,12 @@
     "start": {
       "line": 179,
       "column": 10,
-      "index": 6915
+      "index": 6914
     },
     "end": {
       "line": 182,
       "column": 3,
-      "index": 6992
+      "index": 6991
     }
   },
   {
@@ -426,12 +426,12 @@
     "start": {
       "line": 183,
       "column": 24,
-      "index": 7018
+      "index": 7017
     },
     "end": {
       "line": 187,
       "column": 3,
-      "index": 7300
+      "index": 7299
     }
   },
   {
@@ -441,12 +441,12 @@
     "start": {
       "line": 188,
       "column": 9,
-      "index": 7311
+      "index": 7310
     },
     "end": {
       "line": 191,
       "column": 3,
-      "index": 7373
+      "index": 7372
     }
   },
   {
@@ -456,12 +456,12 @@
     "start": {
       "line": 192,
       "column": 17,
-      "index": 7392
+      "index": 7391
     },
     "end": {
       "line": 195,
       "column": 3,
-      "index": 7494
+      "index": 7493
     }
   },
   {
@@ -471,12 +471,12 @@
     "start": {
       "line": 196,
       "column": 21,
-      "index": 7517
+      "index": 7516
     },
     "end": {
       "line": 199,
       "column": 3,
-      "index": 7619
+      "index": 7618
     }
   },
   {
@@ -486,12 +486,12 @@
     "start": {
       "line": 200,
       "column": 17,
-      "index": 7638
+      "index": 7637
     },
     "end": {
       "line": 203,
       "column": 3,
-      "index": 7725
+      "index": 7724
     }
   },
   {
@@ -501,12 +501,12 @@
     "start": {
       "line": 204,
       "column": 14,
-      "index": 7741
+      "index": 7740
     },
     "end": {
       "line": 207,
       "column": 3,
-      "index": 7822
+      "index": 7821
     }
   },
   {
@@ -516,12 +516,12 @@
     "start": {
       "line": 208,
       "column": 19,
-      "index": 7843
+      "index": 7842
     },
     "end": {
       "line": 211,
       "column": 3,
-      "index": 7934
+      "index": 7933
     }
   },
   {
@@ -531,12 +531,12 @@
     "start": {
       "line": 212,
       "column": 7,
-      "index": 7943
+      "index": 7942
     },
     "end": {
       "line": 215,
       "column": 3,
-      "index": 8009
+      "index": 8008
     }
   },
   {
@@ -546,12 +546,12 @@
     "start": {
       "line": 216,
       "column": 11,
-      "index": 8022
+      "index": 8021
     },
     "end": {
       "line": 219,
       "column": 3,
-      "index": 8098
+      "index": 8097
     }
   },
   {
@@ -561,12 +561,12 @@
     "start": {
       "line": 220,
       "column": 14,
-      "index": 8114
+      "index": 8113
     },
     "end": {
       "line": 223,
       "column": 3,
-      "index": 8196
+      "index": 8195
     }
   },
   {
@@ -576,12 +576,12 @@
     "start": {
       "line": 224,
       "column": 9,
-      "index": 8207
+      "index": 8206
     },
     "end": {
       "line": 227,
       "column": 3,
-      "index": 8280
+      "index": 8279
     }
   },
   {
@@ -591,12 +591,12 @@
     "start": {
       "line": 228,
       "column": 9,
-      "index": 8291
+      "index": 8290
     },
     "end": {
       "line": 231,
       "column": 3,
-      "index": 8352
+      "index": 8351
     }
   },
   {
@@ -606,12 +606,12 @@
     "start": {
       "line": 232,
       "column": 19,
-      "index": 8373
+      "index": 8372
     },
     "end": {
       "line": 235,
       "column": 3,
-      "index": 8455
+      "index": 8454
     }
   },
   {
@@ -621,12 +621,12 @@
     "start": {
       "line": 236,
       "column": 20,
-      "index": 8477
+      "index": 8476
     },
     "end": {
       "line": 239,
       "column": 3,
-      "index": 8561
+      "index": 8560
     }
   },
   {
@@ -636,12 +636,12 @@
     "start": {
       "line": 240,
       "column": 25,
-      "index": 8588
+      "index": 8587
     },
     "end": {
       "line": 243,
       "column": 3,
-      "index": 8708
+      "index": 8707
     }
   },
   {
@@ -651,12 +651,12 @@
     "start": {
       "line": 244,
       "column": 8,
-      "index": 8718
+      "index": 8717
     },
     "end": {
       "line": 247,
       "column": 3,
-      "index": 8777
+      "index": 8776
     }
   },
   {
@@ -666,12 +666,12 @@
     "start": {
       "line": 248,
       "column": 14,
-      "index": 8793
+      "index": 8792
     },
     "end": {
       "line": 251,
       "column": 3,
-      "index": 8852
+      "index": 8851
     }
   },
   {
@@ -681,12 +681,12 @@
     "start": {
       "line": 254,
       "column": 11,
-      "index": 8911
+      "index": 8910
     },
     "end": {
       "line": 257,
       "column": 3,
-      "index": 9006
+      "index": 9005
     }
   },
   {
@@ -696,12 +696,12 @@
     "start": {
       "line": 258,
       "column": 12,
-      "index": 9020
+      "index": 9019
     },
     "end": {
       "line": 261,
       "column": 3,
-      "index": 9123
+      "index": 9122
     }
   },
   {
@@ -711,12 +711,12 @@
     "start": {
       "line": 262,
       "column": 9,
-      "index": 9134
+      "index": 9133
     },
     "end": {
       "line": 265,
       "column": 3,
-      "index": 9224
+      "index": 9223
     }
   },
   {
@@ -726,12 +726,12 @@
     "start": {
       "line": 266,
       "column": 16,
-      "index": 9242
+      "index": 9241
     },
     "end": {
       "line": 269,
       "column": 3,
-      "index": 9338
+      "index": 9337
     }
   },
   {
@@ -741,12 +741,12 @@
     "start": {
       "line": 270,
       "column": 20,
-      "index": 9360
+      "index": 9359
     },
     "end": {
       "line": 273,
       "column": 3,
-      "index": 9449
+      "index": 9448
     }
   },
   {
@@ -756,12 +756,12 @@
     "start": {
       "line": 274,
       "column": 11,
-      "index": 9462
+      "index": 9461
     },
     "end": {
       "line": 277,
       "column": 3,
-      "index": 9556
+      "index": 9555
     }
   }
 ]
