chore(swap): list orders check

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -156,6 +156,22 @@
   "swap.swapScreen.poolVerification": "{pool} verification",
   "swap.swapScreen.volume": "Volume, 24h",
   "swap.swapScreen.tvl": " TVL",
+  "swap.listOrders.completed": "completed orders",
+  "swap.listOrders.open": "open orders",
+  "swap.listOrders.sheet.title": "Confirm order cancelation",
+  "swap.listOrders.card.buttonText": "Cancel order",
+  "swap.listOrders.sheet.contentTitle": "Are you sure you want to cancel this order?",
+  "swap.listOrders.sheet.link": "Learn more about swap orders in Yoroi",
+  "swap.listOrders.sheet.assetPrice": "Asset price",
+  "swap.listOrders.sheet.assetAmount": "Asset amount",
+  "swap.listOrders.sheet.totalReturned": "Total returned",
+  "swap.listOrders.sheet.cancellationFee": "Cancellation Fee",
+  "swap.listOrders.sheet.confirm": "Confirm",
+  "swap.listOrders.sheet.back": "Back",
+  "swap.listOrders.total": "Total",
+  "swap.listOrders.liquidityPool": "Liquidity Pool",
+  "swap.listOrders.timeCreated": "Time Created",
+  "swap.listOrders.txId": "Transaction ID",
   "components.common.navigation.nftGallery": "NFT Gallery",
   "components.receive.addressmodal.BIP32path": "Derivation path",
   "components.receive.addressmodal.copiedLabel": "Copied",
